 @startuml
'https://plantuml.com/sequence-diagram

abstract AbstractSupport {
    + AbstractSupport(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + {abstract} Effect(HeroAircraft heroAircraft):void
}

class Bomb {
    +Bomb(int locationX, int locationY, int speedX, int speedY)
    +Effect(HeroAircraft heroAircraft):void
}

class Fire {
    +Fire(int locationX, int locationY, int speedX, int speedY)
    +Effect(HeroAircraft heroAircraft):void
}

class Heal {
    +Heal(int locationX, int locationY, int speedX, int speedY)
    +Effect(HeroAircraft heroAircraft):void
}
class PlusFire
{
    +plusFire(int locationX, int locationY, int speedX, int speedY)
    +Effect(HeroAircraft heroAircraft):void
}
AbstractSupport <|-- Bomb
AbstractSupport <|-- Fire
AbstractSupport <|-- Heal
AbstractSupport <|-- PlusFire

abstract class SupportFactory {
    +{abstract}CreatSupport(int locationX, int locationY, int speedX, int speedY):AbstractSupport;
}
class BombFactory {
    +CreatSupport(int locationX, int locationY, int speedX, int speedY):AbstractSupport;
}
class FireFactory {
    +CreatSupport(int locationX, int locationY, int speedX, int speedY):AbstractSupport;
}

class HealFactory {
    +CreatSupport(int locationX, int locationY, int speedX, int speedY):AbstractSupport;
}

class PlusFireFactory
{
    +CreatSupport(int locationX, int locationY, int speedX, int speedY):AbstractSupport;
}
HealFactory ..> Heal
BombFactory ..> Bomb
FireFactory ..> Fire
PlusFireFactory ..> PlusFire
SupportFactory <|-- BombFactory
SupportFactory <|-- FireFactory
SupportFactory <|-- HealFactory
SupportFactory <|-- PlusFireFactory

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + drop() :List<AbstractSupport>
}
AbstractEnemy <|-- MobEnemy

class PlusEnemy{
    + PlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + drop() :List<AbstractSupport>
}
AbstractEnemy <|-- PlusEnemy

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractEnemy <|-- EliteEnemy

class BossEnemy{
    + PlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + drop() :List<AbstractSupport>
}
AbstractEnemy <|-- BossEnemy

abstract class AbstractEnemy
{
}

abstract class EnemyFactory {
    +{abstract}CreatEnemy():AbstractEnemy;
}
class EliteFactory {
    +CreatEnemy():AbstractEnemy;
}
class MobFactory {
    +CreatEnemy():AbstractEnemy;
}
class PlusFactory{
    -direction():int
    +CreatEnemy():AbstractEnemy;
}
class BossFactory{
    -direction():int
    +CreatEnemy():AbstractEnemy;
}
MobEnemy <.. MobFactory
EliteEnemy <.. EliteFactory
EnemyFactory <|-- EliteFactory
EnemyFactory <|-- MobFactory
EnemyFactory <|-- PlusFactory
PlusEnemy <.. PlusFactory
EnemyFactory <|-- BossFactory
BossEnemy <.. BossFactory



class game{}
game ..> AbstractEnemy
game ..> EnemyFactory
game ..> AbstractSupport
EliteEnemy ..> SupportFactory
@enduml